--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-Testing 123!
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Inch Worm Games</title>
+
+   <!--- <script type="importmap" src="script/importmap.json"></script> --->
+
+
+   <!--- <link rel="stylesheet" href="css/base.css"> --->
+
+  </head>
+
+  <body>
+
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyD2IU51PhDEIYzFWwz8PpC-VqhpuUaqyc8",
+      authDomain: "inch-worm-games-api-store.firebaseapp.com",
+      projectId: "inch-worm-games-api-store",
+      storageBucket: "inch-worm-games-api-store.appspot.com",
+      messagingSenderId: "33618785325",
+      appId: "1:33618785325:web:130374454c9cbebb2974a4",
+      measurementId: "G-8Z2TJ2DNNT"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
+
+
+  
+
+  </body>
+
+</html>
